@@ -1,6 +1,20 @@
 <%@ page import="java.util.ResourceBundle, art.servlets.ArtDBCP,art.params.*;" %>
 <jsp:useBean id="ue" scope="session" class="art.utils.UserEntity" />
-<%@ include file ="header.jsp" %>
+
+<%
+//support display of results in the showparams page using jquery ajax
+java.util.ResourceBundle qhMessages = java.util.ResourceBundle.getBundle("art.i18n.ArtMessages",request.getLocale());
+
+boolean isInline=false;
+if(request.getParameter("_isInline")!=null){
+	isInline=true;
+}
+
+if(!isInline){ 	%>	
+	<%@ include file ="header.jsp" %>
+<% }
+%>
+
 
 <div align="center">
 
@@ -14,7 +28,7 @@
   <td>
    <div class="small" id="statusDiv" style="border-left: 0px">
     <c:if test="${empty param._mobile}">
-     <%=messages.getString("queryInProgress")%>
+     <%=qhMessages.getString("queryInProgress")%>
     </c:if>
    </div>
   </td>
